# snowflake-multimodal-demo

./: .env.template  .gitignore  app.py  column.md  pyproject.toml
mode/: multiple.py  single.py
snowflake/: object_initializer.py  session_manager.py
