[project]
name = "snowflake-env"
version = "0.1.0"
description = ""
authors = [
    {name = "xmr-is",email = "mrkn0131@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11,<3.13"
dependencies = [
    "snowflake-snowpark-python (>=1.32.0,<2.0.0)",
    "streamlit (>=1.45.1,<2.0.0)",
    "dotenv (>=0.9.9,<0.10.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
